--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2'
     //implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6") // 로그 같은경우는 배포에서는 빼는게 좋다
 }
 
